<resources>
    <string name="app_name">Saludable</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    //strings Login
    <string name="tvlogin">Login</string>
    <string name="emailLogin">Ingrese su email</string>
    <string name="contraseñaLogin">Ingrese su contraseña</string>

    //strings Home
    <string name="bienvenido">Bienvenido</string>

    //Buttons
    <string name="signup">Registrarse</string>
    <string name="login">Acceder</string>

    // Menu
    <string name="inicio">Inicio</string>
    <string name="registro">Nuevo registro</string>
    <string name="logout">Logout</string>
    <string name="misDatos">Mis datos</string>
    <string name="opciones">Opciones</string>
    <string name="settings">Settings</string>

    //strings Registro
    <string name="tipoComida">Tipo de comida</string>
    <string name="comidaPrincipal">Comida principal</string>
    <string name="comidaSecundaria">Comida secundaria</string>
    <string name="bebida">Bebida</string>
    <string name="preguntaPostre">¿Ingirió postre?</string>
    <string name="postre">Postre</string>
    <string name="preguntaTentacion">¿Tuvo tentación de ingerir otro alimento?</string>
    <string name="alimentoTentacion">Alimento que quería ingerir</string>
    <string name="preguntaHambre">¿Se quedó con hambre?</string>
    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="merienda">Merienda</string>
    <string name="cena">Cena</string>

    // Usuario
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="localidad">Localidad</string>
    <string name="usuario">Usuario</string>
    <string name="contraseña">Contraseña</string>
    //sexo
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="otro">Otro</string>
    //Tipo de tratamiento
    <string name="tipotraTamiento">Tipo de tratamiento</string>
    <string name="anorexia">Anorexia</string>
    <string name="bulimia">Bulimia</string>
    <string name="Obesidad">Obesidad</string>

    // Navigation drawer
    <string name="navigation_drawer_open">"open"</string>
    <string name="navigation_drawer_close">"close"</string>

    // Tipos de tratamiento
    <string-array name="tratamientos">
        <item>Anorexia</item>
        <item>Bulimia</item>
        <item>Obesidad</item>
    </string-array>

    // Tipos de comida
    <string-array name="comidas">
        <item>Desayuno</item>
        <item>Almuerzo</item>
        <item>Merienda</item>
        <item>Cena</item>
    </string-array>

</resources>