<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_item_inicio"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio"/>

        <item android:id="@+id/nav_item_registro"
            android:icon="@drawable/ic_registro"
            android:title="@string/registro"/>

        <item android:id="@+id/nav_item_mis_datos"
            android:icon="@drawable/ic_account"
            android:title="@string/misDatos"/>
    </group>

    <item android:title="@string/opciones">
        <menu>
            <item android:id="@+id/nav_item_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings"/>
        </menu>
    </item>

    <group>
        <item android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_logoff"
            android:title="@string/logout"/>
    </group>
</menu>

