<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_editor_absoluteX="1dp"
    app:layout_editor_absoluteY="1dp">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".UserFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/til_nombre"
            app:endIconMode="clear_text"
            app:helperText="Obligatorio*"
            app:helperTextTextColor="@color/teal_700"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNombre"
                android:hint="Nombre"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/til_apellido"
            app:endIconMode="clear_text"
            app:helperText="Obligatorio*"
            app:helperTextTextColor="@color/teal_700"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etApellido"
                android:hint="@string/apellido"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/til_dni"
            app:endIconMode="clear_text"
            app:helperText="Obligatorio*"
            app:helperTextTextColor="@color/teal_700"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etDni"
                android:hint="@string/dni"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="8"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sexo" />

        <RadioGroup
            android:id="@+id/rgSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineProvider="paddedBounds">


            <RadioButton
                android:id="@+id/rbMasculino"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/rbFemenino"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/femenino" />

            <RadioButton
                android:id="@+id/rbOtroSexo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/otro" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/til_fechaNacimiento"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/teal_700"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:layout_marginTop="8dp"
                android:imeOptions="actionNext"
                android:hint="@string/fechaNacimiento"
                android:clickable="false"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/til_localidad"
            app:endIconMode="clear_text"
            app:helperTextTextColor="@color/teal_700"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etLocalidad"
                android:hint="@string/localidad"
                android:imeOptions="actionNext"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:id="@+id/til_tipoTratamiento"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/actvTipoTratamiento"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/anorexia" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="Guardar"
            app:icon="@drawable/ic_save" />

    </LinearLayout>
</ScrollView>
