<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/llHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="40dp"
            android:layout_marginTop="80dp"
            android:padding="10dp"
            android:paddingBottom="100dp"
            app:srcCompat="@drawable/icono_saludable" />

        <TextView
            android:id="@+id/tvTituloLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20sp"
            android:foregroundGravity="center|center_horizontal"
            android:text="@string/tvlogin"
            android:textSize="24sp"
            android:textStyle="bold" />

<!--        <EditText-->
<!--            android:id="@+id/etEmailLogin"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/emailLogin"-->
<!--            android:inputType="textEmailAddress" />-->

<!--        <EditText-->
<!--            android:id="@+id/etPassword"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:layout_marginBottom="20dp"-->
<!--            android:ems="10"-->
<!--            android:hint="@string/contraseñaLogin"-->
<!--            android:inputType="textPassword" />-->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.Saludable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                style="@style/Theme.Saludable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/primary_light"
                android:hint="@string/emailLogin"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Theme.Saludable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorIconDrawable="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPasword"
                style="@style/Theme.Saludable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/primary_light"
                android:hint="@string/contraseñaLogin"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/verdePrimario"
                android:text="@string/login" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@color/verdePrimario"
                android:text="@string/signup" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>