<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/cardView"
    android:layout_margin="12dp"
    card_view:cardBackgroundColor="@color/primary_dark"
    card_view:cardCornerRadius="20dp"
    card_view:cardElevation="6dp"
    card_view:contentPadding="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="104dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_tituloRegistroAlimentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary_dark"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle"
            android:text="Titulo Registro"
            android:textColor="@color/primary_light"
            card_view:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_tipoComida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintTop_toTopOf="@+id/tv_tituloRegistroAlimentario"/>
        <TextView
            android:id="@+id/tv_comidaPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintTop_toTopOf="@+id/tv_tipoComida"/>

        <TextView
            android:id="@+id/tv_comidaSecundaria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintTop_toTopOf="@+id/tv_comidaPrincipal"/>

        <TextView
            android:id="@+id/tv_bebida"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintTop_toTopOf="@+id/tv_comidaSecundaria"/>

        <TextView
            android:id="@+id/tv_postre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/preguntaPostre"
            card_view:layout_constraintTop_toTopOf="@+id/tv_bebida"/>

        <TextView
            android:id="@+id/tv_detallePostre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintTop_toTopOf="@+id/tv_postre"/>

        <TextView
            android:id="@+id/tv_preguntaTentacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/preguntaTentacion"
            card_view:layout_constraintTop_toTopOf="@+id/tv_detallePostre"/>

        <TextView
            android:id="@+id/tv_alimentoTentacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:layout_constraintTop_toTopOf="@+id/tv_preguntaTentacion"/>

        <TextView
            android:id="@+id/tv_preguntaHambre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/preguntaHambre"
            card_view:layout_constraintTop_toTopOf="@+id/tv_alimentoTentacion"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>